# ferreus_rbf_rs

./: .gitignore  CLAUDE.md  Cargo.toml  FASTRBF_INVESTIGATION_PLAN.md  LICENSE  README.md  footer.html
.github/workflows/: docs-ferreus-bbfmm.yml  docs-ferreus-rbf.yml  docs.yml  publish-py-ferreus-bbfmm.yml  publish-py-ferreus-rbf.yml  publish-py-ferreus-rmt.yml
ferreus_bbfmm/: Cargo.toml  README.md
ferreus_bbfmm/src/: aca.rs  bbfmm.rs  chebyshev.rs  lib.rs  linear_tree.rs  morton.rs  morton_constants.rs  traits.rs  utils.rs
ferreus_rbf/: Cargo.toml  README.md
ferreus_rbf/docs/: drift.md  fmm_params.md  interpolant_settings.md  kernel_types.md  params.md  rbf_interpolator.md  references.md
ferreus_rbf/examples/: franke_2d.rs  isosurface_linear.rs  isosurface_linear_rmt.rs  isosurface_linear_surface_nets.rs  isosurface_linear_topo.rs  isosurface_sphere.rs  isosurface_spheroidal.rs  isosurface_spheroidal_drift.rs  isosurface_trend_linear.rs
ferreus_rbf/src/: common.rs  config.rs  domain.rs  global_trend.rs  interpolant_config.rs  iterative_solvers.rs  kdtree.rs  lib.rs  linalg.rs  polynomials.rs  progress.rs  rbf.rs  rbf_test_functions.rs  rtree.rs
ferreus_rbf/src/preconditioning/: domain_decomposition.rs  mod.rs  schwarz.rs
ferreus_rbf/src/surfacing/: mod.rs  surfacing_io.rs
ferreus_rbf/src/surfacing/surface_nets/: mod.rs  surface_nets.rs
ferreus_rbf_utils/: Cargo.toml  README.md
ferreus_rbf_utils/src/: constants.rs  kernel_helpers.rs  lib.rs  non_rbf_kernels.rs  rbf_kernels.rs  traits.rs  utils.rs
ferreus_rmt/: Cargo.toml  README.md  footer.html
ferreus_rmt/examples/: sphere.rs
ferreus_rmt/src/: aabb_clipping.rs  boundary_closure.rs  constants.rs  curvature_weighting.rs  isosurface.rs  lattice.rs  lib.rs  mesh.rs  mesh_cleanup.rs  mesh_intersections.rs  moller.rs  progress.rs  seed_projection.rs  topology.rs
ferreus_rmt/src/geometry/: mod.rs  point.rs  triangle.rs
investigation/: FINAL_REPORT.md  PHASE1_FINDINGS.md  PHASE2_3_SUMMARY.md  PHASE4_GEOMODELLING.md  PHASE5_ECOSYSTEM.md  complexity_benchmark.rs
investigation/benchmarks/: simple_complexity.rs
py_ferreus_bbfmm/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
py_ferreus_bbfmm/docs/: index.md
py_ferreus_bbfmm/docs/api/: FmmParams.md  FmmTree.md  KernelParams.md  index.md
py_ferreus_bbfmm/docs/api/enums/: FmmCompressionType.md  KernelType.md  SpheroidalOrder.md
py_ferreus_bbfmm/docs/examples/: matrix_vector_product.md  matrix_vector_product_with_gradients.md  rbf_evaluator.md
py_ferreus_bbfmm/docs/stylesheets/: extras.css
py_ferreus_bbfmm/examples/: matrix_vector_product.py  matrix_vector_product_with_gradients.py  rbf_evaluator.py
py_ferreus_bbfmm/ferreus_bbfmm/: ferreus_bbfmm.pyi
py_ferreus_bbfmm/src/: lib.rs  python_bindings.rs
py_ferreus_rbf/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
py_ferreus_rbf/datasets/: albatite_SD_points.csv
py_ferreus_rbf/docs/: examples.md  index.md
py_ferreus_rbf/docs/api/: BuildIsosurface.md  Coefficients.md  DDMParams.md  FittingAccuracy.md  FmmParams.md  GlobalTrend.md  InterpolantSettings.md  Mesh.md  Params.md  RBFInterpolator.md  RBFTestFunctions.md  index.md  progress.md  save_obj.md  surface_nets.md
py_ferreus_rbf/docs/api/enums/: BoundaryClosure.md  ClusterMethod.md  Drift.md  FittingAccuracyType.md  FmmCompressionType.md  RBFKernelType.md  Solvers.md  SpheroidalOrder.md
py_ferreus_rbf/docs/examples/: franke_2d.md  isosurface_linear.md  isosurface_linear_topo.md  isosurface_spheroidal.md  isosurface_spheroidal_drift.md  isosurface_trend_linear.md
py_ferreus_rbf/examples/: franke_2d.py  isosurface_linear.py  isosurface_linear_rmt.py  isosurface_linear_surface_nets.py  isosurface_linear_topo.py  isosurface_sphere.py  isosurface_spheroidal.py  isosurface_spheroidal_drift.py  isosurface_trend_linear.py
py_ferreus_rbf/ferreus_rbf/: ferreus_rbf.pyi
py_ferreus_rbf/ferreus_rbf/interpolant_config/: __init__.pyi
py_ferreus_rbf/ferreus_rbf/isosurfacing/: __init__.pyi  __init__py
py_ferreus_rbf/ferreus_rbf/progress/: __init__.pyi
py_ferreus_rbf/src/: lib.rs  python_bindings.rs
py_ferreus_rmt/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
py_ferreus_rmt/docs/: examples.md  index.md
py_ferreus_rmt/docs/api/: BuildIsosurface.md  Mesh.md  build_isosurface.md  index.md
py_ferreus_rmt/docs/api/enums/: BoundaryClosure.md  ClusterMethod.md
py_ferreus_rmt/docs/examples/: boundary_closure.md  isosurface_sphere.md
py_ferreus_rmt/docs/stylesheets/: extras.css
py_ferreus_rmt/examples/: boundary_closure.py  isosurface_sphere.py
py_ferreus_rmt/ferreus_rmt/: __init__.py  ferreus_rmt.pyi
py_ferreus_rmt/ferreus_rmt/progress/: __init__.py  __init__.pyi
py_ferreus_rmt/src/: lib.rs  python_bindings.rs
