[package]
name = "ferreus_bbfmm"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Owen <daniel.owen@live.com.au>"]
description = "Parallel black box fast multipole method (BBFMM) library"
readme = "README.md"
repository = "https://github.com/graphic-goose/ferreus_rbf_rs"
license = "MIT"
keywords = ["fmm", "bbfmm", "fast-multipole"]
rust-version = "1.85.0"

[dependencies]
faer = "0.23.2"
rayon = "1.11.0"
itertools = "0.14.0"

[dev-dependencies]
csv = "1.4.0"
rand = "0.9.2"

[profile.dev.package.faer]
opt-level = 3

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "katex-header.html",
    "--html-after-content", "footer.html",
]
