[package]
name = "ferreus_rbf"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Owen <daniel.owen@live.com.au>"]
description = "Fast, memory efficient radial basis function (RBF) interpolation library"
readme = "README.md"
repository = "https://github.com/graphic-goose/ferreus_rbf_rs"
license = "MIT"
keywords = ["rbf", "radial-basis", "isosurface", "interpolation"]
rust-version = "1.85.0"

[lib]
crate-type = ["lib"]

[dependencies]
csv = "1.4.0"
rayon = "1.11.0"
faer = { version = "0.23.2", features = ["serde"] }
faer-traits = "0.23.2"
rand = "0.9.2"
roots = "0.0.8"
ferreus_rbf_utils = "0.1.0"
ferreus_bbfmm = "0.1.0"
rstar = "0.12.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive", "rc"] }

[dev-dependencies]
equator = { version = "0.4.2" }

[profile.dev]
opt-level = 3

[profile.dev.package.faer]
opt-level = 3

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "katex-header.html",
    "--html-after-content", "footer.html",
]
