[package]
name = "ferreus_rmt"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Owen <daniel.owen@live.com.au>"]
description = "Fast, surface-following regularised marching tetrahedra isosurface extraction"
readme = "README.md"
repository = "https://github.com/graphic-goose/ferreus_rbf_rs"
license = "MIT"
keywords = ["isosurface", "marching", "tetrahedra", "rmt", "mesh"]
rust-version = "1.85.0"

[lib]
crate-type = ["lib"]

[dependencies]
faer = "0.23.2"
rstar = "0.12.2"
spade = "2.15.1"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "katex-header.html",
    "--html-after-content", "footer.html",
]
