[package]
name = "py_ferreus_bbfmm"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Owen <daniel.owen@live.com.au>"]
description = "Python bindings for ferreus_bbfmm crate"
readme = "../README.md"
repository = ""
license = "MIT"
keywords = ["fmm", "bbfmm", "fast-multipole-method", "matrix-vector-product"]
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib"]  # Required for Python bindings

[dependencies]
faer = "0.23.2"
itertools = "0.14.0"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
numpy = "0.26.0"
faer-ext = { version = "0.7.1", features = ["numpy"] }
ferreus_rbf_utils = "0.1.0"
ferreus_bbfmm = "0.1.0"

[dev-dependencies]
csv = "1.4.0"
rand = "0.9.2"

[package.metadata.maturin]
name = "ferreus_bbfmm"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../katex-header.html"]