[package]
name = "py_ferreus_rmt"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Owen <daniel.owen@live.com.au>"]
description = "Python bindings for the regularised_marching_tetrahedra crate"
readme = "README.md"
repository = "https://github.com/graphic-goose/ferreus_rbf_rs"
license = "MIT"
keywords = ["isosurface", "marching", "tetrahedra", "rmt", "mesh"]
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
faer = "0.23.2"
faer-ext = { version = "0.7.1", features = ["numpy"] }
numpy = "0.26.0"
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py38"] }
ferreus_rmt = "0.1.0"

[package.metadata.maturin]
name = "ferreus_rmt"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../katex-header.html"]