[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "ferreus_rmt"
version = "0.1.0"
readme = "README.md"
license = "MIT"
authors = [{ name = "Daniel Owen", email = "daniel.owen@live.com.au"}]
description = "Fast isosurface extraction using surface-following regularised marching tetrahedra"
requires-python = ">=3.8"
keywords = [
    "isosurface",
    "marching-tetrahedra",
    "mesh",
    "surfacing",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
profile = "release"
features = ["pyo3/extension-module"]

[project.urls]
Homepage = "https://github.com/graphic-goose/ferreus_rbf_rs/"
Documentation = "https://graphic-goose.github.io/ferreus_rbf_rs/ferreus_rmt/"
